Finish menus expandibles; add favicon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="" content="">
     <meta name="" content="">
     <meta name="" content="">
+    <link rel="shortcut icon" href="" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -25,26 +26,45 @@
             <a id="btnApp" href="#"><div class="header_btnContainer btnApp"></div></a>
             <a class="header_btnContainer" href="#"><img class="btnImgProfile" src="images/profilePhoto.jpg" alt="Imagen de perfil"></a>
             <div id="toffle" class="toffle">
-                <ul>
+                <ul class="toffle_ul_top">
                     <li><a href="#"><img class="btnImgProfile" src="images/profilePhoto.jpg" alt="Imagen de Perfil">Cuenta</a></li>
-                    <li><a href="#">icon</a></li>
-                    <li><a href="#">icon</a></li>
-                    <li><a href="#">icon</a></li>
-                    <li><a href="#">icon</a></li>
-                    <li><a href="#">icon</a></li>
-                    <li><a href="#">icon</a></li>
-                    <li><a href="#">icon</a></li>
-                    <li><a href="#">icon</a></li>
-                    <li><a href="#">icon</a></li>
-                    <li><a href="#">icon</a></li>
-                    <li><a href="#">icon</a></li>
-                    <li><a href="#">icon</a></li>
-                    <li><a href="#">icon</a></li>
-                    <li><a href="#">icon</a></li>
-                    <li><a href="#">icon</a></li>
-                    <li><a href="#">icon</a></li>
-                    <li><a href="#">icon</a></li>
+                    <li><a href="#">Búsqueda</a></li>
+                    <li><a href="#">Maps</a></li>
+                    <li><a href="#">Youtube</a></li>
+                    <li><a href="#">Play</a></li>
+                    <li><a href="#">Noticias</a></li>
+                    <li><a href="#">Gmail</a></li>
+                    <li><a href="#">Meet</a></li>
+                    <li><a href="#">Chat</a></li>
+                    <li><a href="#">Contactos</a></li>
+                    <li><a href="#">Drive</a></li>
+                    <li><a href="#">Calendar</a></li>
+                    <li><a href="#">Traductor</a></li>
+                    <li><a href="#">Fotos</a></li>
+                    <li><a href="#">Mi centro de anuncios</a></li>
+                    <li><a href="#">Chrome</a></li>
+                    <li><a href="#">Shopping</a></li>
                 </ul>
+                <ul class="toffle_ul_bottom">
+                    <li><a href="#">Finance</a></li>
+                    <li><a href="#">Documentos</a></li>
+                    <li><a href="#">Hojas de cálculo</a></li>
+                    <li><a href="#">Presentaciones</a></li>
+                    <li><a href="#">Libros</a></li>
+                    <li><a href="#">Blogger</a></li>
+                    <li><a href="#">Google Keep</a></li>
+                    <li><a href="#">Jamboard</a></li>
+                    <li><a href="#">Classroom</a></li>
+                    <li><a href="#">Earth</a></li>
+                    <li><a href="#">Guardados</a></li>
+                    <li><a href="#">Arts and Culture</a></li>
+                    <li><a href="#">Google Ads</a></li>
+                    <li><a href="#">Google One</a></li>
+                    <li><a href="#">Viajes</a></li>
+                    <li><a href="#">Formularios</a></li>
+                    <li><a href="#">Chrome Web Store</a></li>
+                </ul>
+                <a class="toffle_a_bottom" href="">Más de Google</a>
             </div>
     </header>
     <div></div>
@@ -61,7 +81,7 @@
                 <ul>
                     <li>
                         <div class="bg_Clock"></div>
-                        <span></span><a href="#">Borrar</a></li>
+                        <span>Curso loco de Codearock</span><a href="#">Borrar</a></li>
                     <li>
                         <div class="bg_Clock"></div>
                         <span></span><a href="#">Borrar</a></li>
