--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="" content="">
     <meta name="" content="">
     <meta name="" content="">
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="images/google-favicon.ico" type="image/icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -27,42 +27,42 @@
             <a class="header_btnContainer" href="#"><img class="btnImgProfile" src="images/profilePhoto.jpg" alt="Imagen de perfil"></a>
             <div id="toffle" class="toffle">
                 <ul class="toffle_ul_top">
-                    <li><a href="#"><img class="btnImgProfile" src="images/profilePhoto.jpg" alt="Imagen de Perfil">Cuenta</a></li>
-                    <li><a href="#">Búsqueda</a></li>
-                    <li><a href="#">Maps</a></li>
-                    <li><a href="#">Youtube</a></li>
-                    <li><a href="#">Play</a></li>
-                    <li><a href="#">Noticias</a></li>
-                    <li><a href="#">Gmail</a></li>
-                    <li><a href="#">Meet</a></li>
-                    <li><a href="#">Chat</a></li>
-                    <li><a href="#">Contactos</a></li>
-                    <li><a href="#">Drive</a></li>
-                    <li><a href="#">Calendar</a></li>
-                    <li><a href="#">Traductor</a></li>
-                    <li><a href="#">Fotos</a></li>
-                    <li><a href="#">Mi centro de anuncios</a></li>
-                    <li><a href="#">Chrome</a></li>
-                    <li><a href="#">Shopping</a></li>
+                    <li><a href="#"><img class="toffleImgprofile" src="images/profilePhoto.jpg" alt="Imagen de Perfil">Cuenta</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/googleg_icon.png" alt="Icono de Google">Búsqueda</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/map-icon.png" alt="Icono de Maps">Maps</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/youtube.png" alt="Icono de Youtube">Youtube</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/googlePlay.svg" alt="Icono de Play">Play</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/noticias.png" alt="Icono de Noticias">Noticias</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/gmail.png" alt="Icono de Gmail">Gmail</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/meet.svg" alt="Icono de Meet">Meet</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/chat.png" alt="Icono de Chat">Chat</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/contacto.png" alt="Icono de Contactos">Contactos</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/drive.png" alt="Icono de Drive">Drive</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/calendar.png" alt="Icono de Calendar">Calendar</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google-translate-icon.svg" alt="Icono de Traductor">Traductor</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google-photos-icon.svg" alt="Icono de Fotos">Fotos</a></li>
+                    <li><a href="#"><img class="toffleImg" src="" alt="">Mi centro de anuncios</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/googleChrome.svg" alt="Icono de Chrome">Chrome</a></li>
+                    <li><a href="#"><img class="toffleImg" src="" alt="">Shopping</a></li>
                 </ul>
                 <ul class="toffle_ul_bottom">
-                    <li><a href="#">Finance</a></li>
-                    <li><a href="#">Documentos</a></li>
-                    <li><a href="#">Hojas de cálculo</a></li>
-                    <li><a href="#">Presentaciones</a></li>
-                    <li><a href="#">Libros</a></li>
-                    <li><a href="#">Blogger</a></li>
-                    <li><a href="#">Google Keep</a></li>
-                    <li><a href="#">Jamboard</a></li>
-                    <li><a href="#">Classroom</a></li>
-                    <li><a href="#">Earth</a></li>
-                    <li><a href="#">Guardados</a></li>
-                    <li><a href="#">Arts and Culture</a></li>
-                    <li><a href="#">Google Ads</a></li>
-                    <li><a href="#">Google One</a></li>
-                    <li><a href="#">Viajes</a></li>
-                    <li><a href="#">Formularios</a></li>
-                    <li><a href="#">Chrome Web Store</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/googleFinance.svg" alt="Icono de Finance">Finance</a></li>
+                    <li><a href="#"><img class="toffleImg" src="" alt="">Documentos</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google-sheets-icon.svg" alt="Icono de Hojas de cálculo">Hojas de cálculo</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google-slides-icon.svg" alt="Icono de Presentaciones">Presentaciones</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google-books-icon.svg" alt="Icono de Libros">Libros</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/blogger-icon.svg" alt="Icono de Blogger">Blogger</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google-keep-icon.svg" alt="">Google Keep</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google-jamboard-icon.svg" alt="Icono de Jamboard">Jamboard</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google-classroom-icon.svg" alt="Icono de Classroom">Classroom</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google-earth-icon.svg" alt="Icono de Earth">Earth</a></li>
+                    <li><a href="#"><img class="toffleImg" src="" alt="">Guardados</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google-arts-and-culture-icon.svg" alt="Icono de Arts">Arts and Culture</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/googleAds.svg" alt="Icono de Ads">Google Ads</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google-one-icon.svg" alt="Icono de One">Google One</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google-travel-icon.svg" alt="Icono de Viajes">Viajes</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google-forms-icon.svg" alt="Icono de Formularios">Formularios</a></li>
+                    <li><a href="#"><img class="toffleImg" src="" alt="">Chrome Web Store</a></li>
                 </ul>
                 <a class="toffle_a_bottom" href="">Más de Google</a>
             </div>
