--- a/index.html
+++ b/index.html
@@ -21,48 +21,48 @@
 </head>
 <body>
     <header>
-            <a href="#">Gmail</a>
-            <a href="#">Imágenes</a>
+            <a href="https://mail.google.com">Gmail</a>
+            <a href="https://www.google.com/imghp?hl=es&ogbl">Imágenes</a>
             <a id="btnApp" href="#"><div class="header_btnContainer btnApp"></div></a>
             <a class="header_btnContainer" href="#"><img class="btnImgProfile" src="images/profilePhoto.jpg" alt="Imagen de perfil"></a>
             <div id="toffle" class="toffle">
                 <ul class="toffle_ul_top">
-                    <li><a href="#"><img class="toffleImgprofile" src="images/profilePhoto.jpg" alt="Imagen de Perfil">Cuenta</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/googleg_icon.png" alt="Icono de Google">Búsqueda</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/map-icon.png" alt="Icono de Maps">Maps</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/youtube.png" alt="Icono de Youtube">Youtube</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/googlePlay.svg" alt="Icono de Play">Play</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/noticias.png" alt="Icono de Noticias">Noticias</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/gmail.png" alt="Icono de Gmail">Gmail</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/meet.svg" alt="Icono de Meet">Meet</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/chat.png" alt="Icono de Chat">Chat</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/contacto.png" alt="Icono de Contactos">Contactos</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/drive.png" alt="Icono de Drive">Drive</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/calendar.png" alt="Icono de Calendar">Calendar</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/google-translate-icon.svg" alt="Icono de Traductor">Traductor</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/google-photos-icon.svg" alt="Icono de Fotos">Fotos</a></li>
-                    <li><a href="#"><img class="toffleImg" src="" alt="">Mi centro de anuncios</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/googleChrome.svg" alt="Icono de Chrome">Chrome</a></li>
-                    <li><a href="#"><img class="toffleImg" src="" alt="">Shopping</a></li>
+                    <li><a href="#"><img class="toffleImgprofile" src="images/profilePhoto.jpg" alt="Imagen de Perfil"><span>Cuenta</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_busqueda.svg" alt="Icono de Google"><span>Búsqueda</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_maps.svg" alt="Icono de Maps"><span>Maps</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_youtube.svg" alt="Icono de Youtube"><span>Youtube</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_playstore.svg" alt="Icono de Play"><span>Play</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_news.svg" alt="Icono de Noticias"><span>Noticias</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_gmail.svg" alt="Icono de Gmail"><span>Gmail</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_meet.svg" alt="Icono de Meet"><span>Meet</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_chat.svg" alt="Icono de Chat"><span>Chat</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_contacts.svg" alt="Icono de Contactos"><span>Contactos</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_drive.svg" alt="Icono de Drive"><span>Drive</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_calendar.svg" alt="Icono de Calendar"><span>Calendar</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_translate.svg" alt="Icono de Traductor"><span>Traductor</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_photos.svg" alt="Icono de Fotos"><span>Fotos</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_centroAnuncios.svg" alt="Icono de Centro de anuncios"><span>Mi centro de anuncios</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_chrome.svg" alt="Icono de Chrome"><span>Chrome</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_shopping.svg" alt="Icono de Shopping"><span>Shopping</span></a></li>
                 </ul>
                 <ul class="toffle_ul_bottom">
-                    <li><a href="#"><img class="toffleImg" src="images/googleFinance.svg" alt="Icono de Finance">Finance</a></li>
-                    <li><a href="#"><img class="toffleImg" src="" alt="">Documentos</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/google-sheets-icon.svg" alt="Icono de Hojas de cálculo">Hojas de cálculo</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/google-slides-icon.svg" alt="Icono de Presentaciones">Presentaciones</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/google-books-icon.svg" alt="Icono de Libros">Libros</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/blogger-icon.svg" alt="Icono de Blogger">Blogger</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/google-keep-icon.svg" alt="">Google Keep</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/google-jamboard-icon.svg" alt="Icono de Jamboard">Jamboard</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/google-classroom-icon.svg" alt="Icono de Classroom">Classroom</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/google-earth-icon.svg" alt="Icono de Earth">Earth</a></li>
-                    <li><a href="#"><img class="toffleImg" src="" alt="">Guardados</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/google-arts-and-culture-icon.svg" alt="Icono de Arts">Arts and Culture</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/googleAds.svg" alt="Icono de Ads">Google Ads</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/google-one-icon.svg" alt="Icono de One">Google One</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/google-travel-icon.svg" alt="Icono de Viajes">Viajes</a></li>
-                    <li><a href="#"><img class="toffleImg" src="images/google-forms-icon.svg" alt="Icono de Formularios">Formularios</a></li>
-                    <li><a href="#"><img class="toffleImg" src="" alt="">Chrome Web Store</a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_finance.svg" alt="Icono de Finance"><span>Finance</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_documents.svg" alt="Icono de Documentos"><span>Documentos</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_sheets.svg" alt="Icono de Hojas de cálculo"><span>Hojas de cálculo</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_presentaciones.svg" alt="Icono de Presentaciones"><span>Presentaciones</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_books.svg" alt="Icono de Libros"><span>Libros</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_blogger.svg" alt="Icono de Blogger"><span>Blogger</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_keep.svg" alt="Icono de Keep"><span>Google Keep</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_jamboard.svg" alt="Icono de Jamboard"><span>Jamboard</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_classroom.svg" alt="Icono de Classroom"><span>Classroom</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_earth.svg" alt="Icono de Earth"><span>Earth</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_collections.svg" alt="Icono de Guardados"><span>Guardados</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_arts.svg" alt="Icono de Arts"><span>Arts and Culture</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_ads.svg" alt="Icono de Ads"><span>Google Ads</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_one.svg" alt="Icono de One"><span>Google One</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_travel.svg" alt="Icono de Viajes"><span>Viajes</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_forms.svg" alt="Icono de Formularios"><span>Formularios</span></a></li>
+                    <li><a href="#"><img class="toffleImg" src="images/google_chromeStore.svg" alt="Icono de Chrome Web Store"><span>Chrome Web Store</span></a></li>
                 </ul>
                 <a class="toffle_a_bottom" href="">Más de Google</a>
             </div>
@@ -97,13 +97,13 @@
                 </ul>
                 <div class="section_buttonsContainer">
                     <a class="buttonsContainer_button" href="#">Buscar con Google</a>
-                    <a class="buttonsContainer_button" href="#">Voy a tener suerte</a>
+                    <a class="buttonsContainer_button" href="https://www.google.com/doodles">Voy a tener suerte</a>
                 </div>  
             </div>
         </div>
         <div id="btnContainer" class="section_buttonsContainer">
-            <a class="buttonsContainer_button" href="">Buscar con Google</a>
-            <a class="buttonsContainer_button" href="">Voy a tener suerte</a>
+            <a class="buttonsContainer_button" href="#">Buscar con Google</a>
+            <a class="buttonsContainer_button" href="https://www.google.com/doodles">Voy a tener suerte</a>
             <small>Ofrecido por Google en: <a href="">Español (Latinoamérica)</a></small>
         </div>
     </section>
