ADD: click event in document for searcher_expand

--- a/index.html
+++ b/index.html
@@ -74,29 +74,34 @@
             <div id="sectionSearcher" class="section_searcher">
                 <img class="searcher_lupa" src="images/lupa.svg" alt="imagen de una lupa">
                 <input id="inputSearcher" class="searcher_texbox" type="text">
-                <a href=""><div class="searcher_mic"></div></a>
-                <a href=""><div class="searcher_cam"></div></a>
+                <a href="#"><div class="searcher_mic"></div></a>
+                <a href="#"><div class="searcher_cam"></div></a>
             </div>
             <div id="searcherExpandible" class="searcher_expandible">
                 <ul>
                     <li>
                         <div class="bg_Clock"></div>
-                        <span>Curso loco de Codearock</span><a href="#">Borrar</a></li>
+                        <span>Curso loco de Codearock</span><a class="searcher_borrar" href="#">Borrar</a>
+                    </li>
+                    <!-- <li>
+                        <div class="bg_Clock"></div>
+                        <span></span><a class="searcher_borrar" href="#">Borrar</a>
+                    </li>
                     <li>
                         <div class="bg_Clock"></div>
-                        <span></span><a href="#">Borrar</a></li>
+                        <span></span><a class="searcher_borrar" href="#">Borrar</a>
+                    </li>
                     <li>
                         <div class="bg_Clock"></div>
-                        <span></span><a href="#">Borrar</a></li>
+                        <span></span><a class="searcher_borrar" href="#">Borrar</a>
+                    </li>
                     <li>
                         <div class="bg_Clock"></div>
-                        <span></span><a href="#">Borrar</a></li>
-                    <li>
-                        <div class="bg_Clock"></div>
-                        <span></span><a href="#">Borrar</a></li>
+                        <span></span><a class="searcher_borrar" href="#">Borrar</a>
+                    </li> -->
                 </ul>
                 <div class="section_buttonsContainer">
-                    <a class="buttonsContainer_button" href="#">Buscar con Google</a>
+                    <a id="buscarGoogle" class="buttonsContainer_button" href="#">Buscar con Google</a>
                     <a class="buttonsContainer_button" href="https://www.google.com/doodles">Voy a tener suerte</a>
                 </div>  
             </div>
@@ -111,15 +116,15 @@
         <p>Argentina</p>
         <nav>
             <ul>
-                <li><a href="">Sobre Google</a></li>
-                <li><a href="">Publicidad</a></li>
-                <li><a href="">Negocios</a></li>
-                <li><a href="">Cómo funciona la Búsqueda</a></li>
+                <li><a href="#">Sobre Google</a></li>
+                <li><a href="#">Publicidad</a></li>
+                <li><a href="#">Negocios</a></li>
+                <li><a href="#">Cómo funciona la Búsqueda</a></li>
             </ul>
             <ul>
-                <li><a href="">Privacidad</a></li>
-                <li><a href="">Condiciones</a></li>
-                <li><a href="">Preferencias</a></li>
+                <li><a href="#">Privacidad</a></li>
+                <li><a href="#">Condiciones</a></li>
+                <li><a href="#">Preferencias</a></li>
             </ul>
         </nav>
     </footer>
