ADD event create elements list

--- a/index.html
+++ b/index.html
@@ -78,52 +78,37 @@
                 <a href="#"><div class="searcher_cam"></div></a>
             </div>
             <div id="searcherExpandible" class="searcher_expandible">
-                <ul>
-                    <li>
+                <ul id="ulSearcherExpandible">
+                    <!--<li>
                         <div class="bg_Clock"></div>
-                        <span>Curso loco de Codearock</span><a class="searcher_borrar" href="#">Borrar</a>
-                    </li>
-                    <!-- <li>
-                        <div class="bg_Clock"></div>
-                        <span></span><a class="searcher_borrar" href="#">Borrar</a>
-                    </li>
-                    <li>
-                        <div class="bg_Clock"></div>
-                        <span></span><a class="searcher_borrar" href="#">Borrar</a>
-                    </li>
-                    <li>
-                        <div class="bg_Clock"></div>
-                        <span></span><a class="searcher_borrar" href="#">Borrar</a>
-                    </li>
-                    <li>
-                        <div class="bg_Clock"></div>
-                        <span></span><a class="searcher_borrar" href="#">Borrar</a>
-                    </li> -->
+                        <span>Curso loco de Codearock</span>
+                        <button class="searcher_borrar">Borrar</button>
+                    </li>-->
                 </ul>
                 <div class="section_buttonsContainer">
-                    <a id="buscarGoogle" class="buttonsContainer_button" href="#">Buscar con Google</a>
+                    <button onclick="agregarBusqueda()" class="buttonsContainer_button" href="#">Buscar con Google</button>
                     <a class="buttonsContainer_button" href="https://www.google.com/doodles">Voy a tener suerte</a>
                 </div>  
             </div>
         </div>
         <div id="btnContainer" class="section_buttonsContainer">
-            <a class="buttonsContainer_button" href="#">Buscar con Google</a>
+            <button onclick="agregarBusqueda()" class="buttonsContainer_button" href="#">Buscar con Google</button>
             <a class="buttonsContainer_button" href="https://www.google.com/doodles">Voy a tener suerte</a>
-            <small>Ofrecido por Google en: <a href="">Español (Latinoamérica)</a></small>
+            <small>Ofrecido por Google en: <a href="#">Español (Latinoamérica)</a></small>
         </div>
     </section>
     <footer>
         <p>Argentina</p>
         <nav>
             <ul>
-                <li><a href="#">Sobre Google</a></li>
-                <li><a href="#">Publicidad</a></li>
-                <li><a href="#">Negocios</a></li>
-                <li><a href="#">Cómo funciona la Búsqueda</a></li>
+                <li><a href="https://about.google" target="_blank">Sobre Google</a></li>
+                <li><a href="https://ads.google.com" target="_blank">Publicidad</a></li>
+                <li><a href="https://smallbusiness.withgoogle.com" target="_blank">Negocios</a></li>
+                <li><a href="https://www.google.com/search/howsearchworks" target="_blank">Cómo funciona la Búsqueda</a></li>
             </ul>
             <ul>
-                <li><a href="#">Privacidad</a></li>
-                <li><a href="#">Condiciones</a></li>
+                <li><a href="https://policies.google.com/privacy" target="_blank">Privacidad</a></li>
+                <li><a href="https://policies.google.com/terms" target="_blank">Condiciones</a></li>
                 <li><a href="#">Preferencias</a></li>
             </ul>
         </nav>
