ADD delete button event on seacherbox

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
     <section>
         <img class="section_logo" src="images/google_centro.png" alt="Logo de Google">
         <div class="section_searcherContainer">
-            <div id="sectionSearcher" class="section_searcher">
+            <form id="sectionSearcher" class="section_searcher">
                 <img class="searcher_lupa" src="images/lupa.svg" alt="imagen de una lupa">
                 <input id="inputSearcher" class="searcher_texbox" type="text">
                 <a href="#"><div class="searcher_mic"></div></a>
                 <a href="#"><div class="searcher_cam"></div></a>
-            </div>
+            </form>
             <div id="searcherExpandible" class="searcher_expandible">
                 <ul id="ulSearcherExpandible">
                     <!--<li>
